# Market_Manus

./: .coveragerc  .env.example  .gitignore  .replit  CHANGELOG.md  Dockerfile  LICENSE  README.md  README_COMPLETE.md  advanced_features.py  api_test.py  backtest_cli.py  backtest_cli_enhanced.py  capital_data.json  capital_manager.py  cleanup_script.ps1  docker-compose.yml  estrutura_atual.txt  fix_git_history.ps1  git_status.txt  main.py  market_manus_cli_complete.py  market_manus_semantic_kernel_integration.py  migration_automation_scripts.py  migration_log.txt  pyproject.toml  quality_automation_scripts.py  replit.md  requirements-dev.txt  requirements.txt  requirements_complete.txt  setup.cfg  strategy_factory_cli.py  strategy_factory_cli_v2.py  test_complete_system_final.py  test_configuration_manager.py  test_ict_framework.py  test_scalping_detectors.py  test_smc_integration.py  test_strategy_factory.py  (+1 more)
agents/: backtesting_agent.py  backtesting_agent_v5.py  base_agent.py  market_analysis_agent.py  notification_agent.py  performance_agent.py
attached_assets/: .env_1759599162473.example  Pasted--CONFLUENCE-MODE-1759611139764_1759611139767.txt  Pasted--CONFLUENCE-MODE-1759611215417_1759611215418.txt  Pasted--CONFLUENCE-MODE-1759617580629_1759617580630.txt  Pasted--CONFLUENCE-MODE-SISTEMA-DE-CONFLU-NCIA--1759617268248_1759617268249.txt  Pasted--Escolha-estrat-gias-ex-1-3-5-ou-0-4-5-6-7-Estrat-gias-selecionadas-MACD-S-1759609921638_1759609921640.txt  Pasted--ORIENTA-O-IMPERATIVA-PARA-O-REPLIT-Feature-Market-Sentiment-Analysis-no-menu-principal-d-1759351888814_1759351888822.txt  Pasted--Pontos-Fortes-Muito-Bem-Implementado-Estrutura-modular-limpa-cada-conceito-SMC-est-isolado-n-1759787482474_1759787482478.txt  Pasted--REPLIT-IMPLEMENTAR-VISUALIZA-O-LIVE-EM-TEMPO-REAL-SEM-SPAM-E-SEM-ESTOURAR-RATE-LIMIT-OBJ-1759339845187_1759339845191.txt  Pasted--REPLIT-TAREFA-CONFLUIR-SMC-patterns-py-CLASSIC-ANALYSIS-classic-analysis-Objetivo-uni-1759335665232_1759335665237.txt  Pasted-3-Bootstrap-hist-rico-Antes-do-WS-buscar-300-1000-candles-via-REST-para-preencher-a-deque-de-c--1759339964811_1759339964813.txt  Pasted-O-que-est-bom-Agrega-o-por-ndice-real-lock-de-posi-o-voc-s-abre-trade-quando-o-ndice-do-c-1759792770378_1759792770381.txt  Pasted-PS-C-Users-Esdras-cd-scalping-trading-system-PS-C-Users-Esdras-scalping-trading-system-python-m-1759781812322_1759781812326.txt  Pasted-PS-C-Users-Esdras-scalping-trading-system-1-Adicionar-ao-PATH-temporariamente-PS-C-Users-Esdr-1759674921981_1759674921983.txt  Pasted-PS-C-Users-Esdras-scalping-trading-system-git-add-warning-in-the-working-copy-of-gitignore--1759627762166_1759627762173.txt  Pasted-PS-C-Users-Esdras-scalping-trading-system-pip-install-git-filter-repo-Defaulting-to-user-installa-1759674665825_1759674665833.txt  Pasted-PS-C-Users-Esdras-scalping-trading-system-python-main-py--1759342476704_1759342476711.txt  Pasted-PS-C-Users-Esdras-scalping-trading-system-python-main-py--1759597206613_1759597206624.txt  Pasted-PS-C-Users-Esdras-scalping-trading-system-python-main-py--1759598937875_1759598937876.txt  Pasted-PS-C-Users-Esdras-scalping-trading-system-python-main-py--1759599913798_1759599913803.txt  Pasted-PS-C-Users-Esdras-scalping-trading-system-python-main-py--1759606928100_1759606928103.txt  Pasted-PS-C-Users-Esdras-scalping-trading-system-python-main-py--1759609157250_1759609157254.txt  Pasted-PS-C-Users-Esdras-scalping-trading-system-python-main-py--1759616261176_1759616261181.txt  Pasted-PS-C-Users-Esdras-scalping-trading-system-python-main-py--1759805939260_1759805939266.txt  Pasted-PS-C-Users-Esdras-scalping-trading-system-python-main-py--1759858395506_1759858395514.txt  Pasted-PS-C-Users-Esdras-scalping-trading-system-python-main-py-MARKET-MANUS-SISTEMA-INTEGRADO-Dat-1759328083980_1759328083986.txt  Pasted-PS-C-Users-Esdras-scalping-trading-system-tree-F-Folder-PATH-listing-Volume-serial-number-is-D4-1759848415858_1759848415864.txt  Pasted-Windows-PowerShell-Copyright-C-Microsoft-Corporation-All-rights-reserved-Try-the-new-cross-p-1759629247012_1759629247013.txt  _1759329317438.env  patterns_1759334460542.py
config/: backtesting_config.json  capital_config.json  exchange_settings.json  risk_parameters.json  settings.json  trading_config.json
data/: ADAUSDT_15_090725_until_091025.parquet  BNBUSDT_15_090125_until_091025.parquet  BTCUSDT_15_010124_until_010125.parquet  BTCUSDT_15_090525_until_091025.parquet  BTCUSDT_15_090925_until_091025.parquet  BTCUSDT_15_090925_until_101025.parquet  BTCUSDT_15m_090925_until_091025.parquet  BTCUSDT_1_070925_until_071025.parquet  BTCUSDT_1_090925_until_091025.parquet  BTCUSDT_240_090125_until_091025.parquet  BTCUSDT_5_011024_until_071025.parquet  BTCUSDT_5_070925_until_071025.parquet  BTCUSDT_5_090725_until_091025.parquet  BTCUSDT_5_090925_until_091025.parquet  BTCUSDT_5_100925_until_101025.parquet  BTCUSDT_60_010123_until_071025.parquet  BTCUSDT_60_010124_until_010125.parquet  ETHUSDT_15_090725_until_091025.parquet  ETHUSDT_15_090925_until_091025.parquet  ETHUSDT_5_090925_until_091025.parquet  cache_metadata.json  performance_history.db
docs/: deployment_guide.md  strategies.md  troubleshooting.md
logs/: README.md
market_manus/: bybit_provider.py  capital_persistence.py  strategy_contract.py
monitoring/: prometheus.yml
reports/: backtest_report_20250719_152156.json  bollinger_breakout_10-08-25_15-52-56.json  dual_mix_ema_bol_10-08-25_15-53-41.json  dual_mix_ema_rsi_10-08-25_15-53-20.json  dual_mix_rsi_bol_10-08-25_15-54-04.json  ema_crossover_10-08-25_15-52-18.json  quick_backtest_with_capital_BTCUSDT_ema_crossover_20250808_220637.json  rsi_mean_reversion_10-08-25_15-52-36.json  triple_mix_all_basic_10-08-25_14-13-45.json  triple_mix_all_basic_10-08-25_15-54-28.json  triple_mix_all_basic_10-08-25_15-54-50.json
scripts/: backup.ps1  deploy.ps1  main.py  monitor.ps1  optimize.ps1
tests/: capital_data.json  main.py  replit.md  requirements.txt  run_tests.py  test_enhanced_cli.py  test_framework.py  test_market_analysis_agent.py  test_risk_management_agent.py  test_strategy_factory.py
(+146 files in other folders)
